...
    ['#f97316', 'Orange'],
    ['#f59e0b', 'Amber'],
    ['#eab308', 'Yellow'],
    ['#84cc16', 'Lime'],
    ['#65a30d', 'Olive'],
    ['#92400e', 'Brown'],
    ['#22c55e', 'Green'],
    ['#10b981', 'Emerald'],
    ['#14b8a6', 'Teal'],
    ['#06b6d4', 'Cyan'],
    ['#0ea5e9', 'Sky'],
    ['#3b82f6', 'Blue'],
    ['#6366f1', 'Indigo'],
...
